# KNF_Tool

./: .dockerignore  .gitignore  2024_11_20-01_07_58_PM.txt  2024_11_20-01_08_45_PM.txt  2024_11_20-01_37_34_PM.txt  2024_11_20-12_48_48_PM.txt  404.html  Dockerfile  Gemini_api_info.txt  README.md  Test_rag.docx  algos.py  compose.yaml  config.json  do_poprawy.txt  document_id_map.json  example_docstring.txt  index.html  leetcode.py  linki_wesockets.txt  main.py  mypy.ini  objects.inv  outputEmail.py  pyproject.toml  requirements.txt  response.txt  results.txt  ruff.toml  test.py  textExtraction.py  ~$st_rag.docx
.github/workflows/: linting.yaml  mkdocsBuild.yaml  mypy.yaml
config/: config.json
docs/: gemini_api_info.md  index.md  logging.md  reference.md  tutorials.md
explanation/: index.html
gemini_api_info/: index.html
logging/: index.html
rag/: chroma.sqlite3
reference/: index.html
site/: 404.html  index.html  objects.inv
site/explanation/: index.html
site/reference/: index.html
site/tutorials/: index.html
src/: Q_A.xlsx  __init__.py  main.py  run.py  textExtraction.py
src/backend/: chroma_instance.py  custom_logger.py  document_id_manager.py  extract_text.py  knfScraping.py  knf_scraping.py  process_query.py  prompt_enhancer.py  rag_chromadb.py  rag_embeddings.py  rag_setup_db.py  rag_setup_db_async.py  rag_use_chroma_collections.py  rag_vector_db_name_generation.py  setup_db_async.py  show_pages.py  test.py  textExtraction.py  text_extraction.py
src/backend/chatbot/: process_query.py  prompt_enhancer.py  show_pages.py
src/backend/rag/: chroma_collection_manager.py  chroma_instance.py  create_chromadb.py  llm_embedding_function.py  setup_db_async.py  test.py  vector_db_name_generation.py
src/backend/scraping/: knf_scraping.py
src/evaluation/: Q_A_total.xlsx  Q_A_total_completed.xlsx  Q_A_total_evaluated.xlsx  Q_A_total_scored.xlsx  evaluation1_complete.py  evaluation2_score.py  evaluation3_evaluate.py
src/exp/: unused_code.py
src/frontend/: index.html
src/knf_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/main_app/: __init__.py  config.py  events.py  routes.py  services.py
src/static/: advancedOptions.js  bottomPanel.js  clearChat.js  clearOutput.js  langchainWindow.js  noInputHandler.js  openPdfNewTab.js  popupTutorial.js  socket.js  socketChat.js  socketManager.js  stopProcessing.js  uploadHandler.js
src/static/css/: adv.css  style.css
src/static/js/: socket.js
src/static/js/subpage/: initialChatMessage.js
src/templates/: documentChat.html  index.html  langchainChat.html  menu.html  output.html  outputChat.html  output_langchain.html  test.html  test1.html  test2.html
src/templates/css/: style.css
src/tests/: test_index_start.py
tutorials/: index.html
vector_db/: chroma.sqlite3
(+2 files in other folders)
