# PEP 621 dependencies declaration
# adapt to your dependencies manager
[project]
dependencies = [
    "mkdocstrings[python]>=0.18",
]

[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E", "W", "F", "C", "A", "U", "N", "TID"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15