# PEP 621 dependencies declaration
# adapt to your dependencies manager
[project]
dependencies = [
    "mkdocstrings[python]>=0.18",
]



[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E", "W", "F", "C", "A", "U", "N", "TID"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15



[tool.mypy]
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# type: ignore[<error-code>] over # type: ignore
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "<library name>.*"
ignore_missing_imports = true