# PEP 621 dependencies declaration
# adapt to your dependencies manager
[project]
name = "knf-tool"
version = "0.1.0"
dependencies = [
    "beautifulsoup4==4.12.3",
    "black==25.1.0",
    "chromadb==1.0.10",
    "flask==3.1.1",
    "flask-caching==2.3.1",
    "flask-socketio==5.5.1",
    "google-generativeai==0.8.5",
    "langchain==0.3.27",
    "markdown==3.8.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.16",
    "mkdocstrings-python==1.16.12",
    "mkdocstrings[python]>=0.18",
    "mypy==1.15.0",
    "numpy==2.2.6",
    "pdfplumber==0.11.6",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "ruff==0.12.8",
    "scikit-learn==1.7.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "mypy",
  "types-requests",
  "types-beautifulsoup4",
  "types-Markdown",
  "types-Flask-SocketIO",
]


[tool.ruff]
target-version = "py310"
line-length = 119

[tool.ruff.lint]
extend-select = ["E501"]
select = ["E", "W", "F", "C", "A", "U", "N", "TID"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15



[tool.mypy]
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
# type: ignore[<error-code>] over # type: ignore
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "<library name>.*"
ignore_missing_imports = true
